--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ul>
     </div>
   </main>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
