--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <form action="">
           <input type="text" name="task" placeholder="Nombre de la tarea" class="inputForm" autocomplete="off"
             data-form-input />
+          <input type="datetime-local" data-form-date placeholder="YYYY/MM/DD">
           <button type="submit" class="btnCreate" data-form-btn>
             Agregar <i class="fas fa-plus-circle"></i>
           </button>
@@ -32,6 +33,8 @@
       </ul>
     </div>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" referrerpolicy="no-referrer"></script>
   <script type="module" src="main.js"></script>
 </body>
 
